# hash_benchmarker

./: Cargo.toml
benches/: bench.rs
src/: lib.rs
